# kwincrosshair

./: .gitignore  CMakeLists.txt  README.md  crosshair.cpp  crosshair.desktop  crosshair.h  crosshair_config.cpp  crosshair_config.desktop  crosshair_config.h  crosshair_config.ui
